--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3586,7 +3586,7 @@
       </notes>
       <segment>
         <source>Bitte ändere deinen Anzeigenamen auf EternalTwin.</source>
-        <target>Cambie su nombre para mostrar a EternalTwin.</target>
+        <target>Cambia tu nombre visible en EternalTwin.</target>
       </segment>
     </unit>
     <unit id="4DFz5Xa">
