ES correcton Verterdero to Vertedero

--- a/translations/buildings+intl-icu.es.xlf
+++ b/translations/buildings+intl-icu.es.xlf
@@ -1568,7 +1568,7 @@
       </notes>
       <segment>
         <source>Verbesserte Müllhalde</source>
-        <target>Verterdero mejorado</target>
+        <target>Vertedero mejorado</target>
       </segment>
     </unit>
     <unit id="K6Bt5zV" name="Müllhalde">
