ES Correction Profesión -> Oficio

--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -2989,7 +2989,7 @@
       </notes>
       <segment>
         <source>Einen Beruf auswählen:</source>
-        <target>Seleccionar una profesión:</target>
+        <target>Elegir un oficio:</target>
       </segment>
     </unit>
     <unit id="_Kc4j.e" name="Stadt anlegen">
