--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -9173,16 +9173,6 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
         <target>Angriff und Verteidigung</target>
       </segment>
     </unit>
-    <unit id="KdxLS.M">
-      <notes>
-        <note category="german">Du zündest eine Zigarette an. Der Rauch lässt dich kräftig Husten, vermutlich weil du daran nicht gewöhnt bist... Nach ein paar Minuten &lt;strong&gt;gelingt es dir dich zu beruhigen&lt;/strong&gt;. Dieser Kurze Moment des Friedens ermöglicht lässt dich deinen Kummer vergessen und bringt dich zurück in die Wirklichkeit.&lt;hr /&gt;Du drückst den Stummel auf dem Boden aus und bist bereit für einen weiteren Tag des Überlebens!&lt;t-consumed&gt;&lt;hr /&gt;Dir fällt auf dass &lt;strong&gt;die Packung leer ist&lt;/strong&gt;!&lt;/t-consumed&gt;</note>
-        <note category="from">db://ItemAction</note>
-      </notes>
-      <segment>
-        <source>Du zündest eine Zigarette an. Der Rauch lässt dich kräftig Husten, vermutlich weil du daran nicht gewöhnt bist... Nach ein paar Minuten &lt;strong&gt;gelingt es dir dich zu beruhigen&lt;/strong&gt;. Dieser Kurze Moment des Friedens ermöglicht lässt dich deinen Kummer vergessen und bringt dich zurück in die Wirklichkeit.&lt;hr /&gt;Du drückst den Stummel auf dem Boden aus und bist bereit für einen weiteren Tag des Überlebens.!&lt;t-consumed&gt;&lt;hr /&gt;Dir fällt auf dass &lt;strong&gt;die Packung leer ist&lt;/strong&gt;!&lt;/t-consumed&gt;</source>
-        <target><![CDATA[You light a cigarette. The smoke makes you cough violently, no doubt because you're not used to it... After a few minutes, <strong>you manage to calm down</strong>. This brief moment of respite allows you to clear your mind a little and take stock of the situation.<hr />You crush the stub on the ground ready to fight for survival once more!<t-consumed><hr />You notice that <strong>the packet is empty</strong>!</t-consumed>]]></target>
-      </segment>
-    </unit>
     <unit id="5MlxE2I" name="Gegenstand verwenden">
       <notes>
         <note category="german">Gegenstand verwenden</note>
@@ -9303,6 +9293,16 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       <segment>
         <source>Verbessert die Verteidigung und verhindert Diebstähle</source>
         <target>Improves defenses and prevents theft</target>
+      </segment>
+    </unit>
+    <unit id="0bR.3rp">
+      <notes>
+        <note category="german">Du zündest eine Zigarette an. Der Rauch lässt dich kräftig Husten, vermutlich weil du daran nicht gewöhnt bist... Nach ein paar Minuten &lt;strong&gt;gelingt es dir dich zu beruhigen&lt;/strong&gt;. Dieser Kurze Moment des Friedens ermöglicht lässt dich deinen Kummer vergessen und bringt dich zurück in die Wirklichkeit.&lt;hr /&gt;Du drückst den Stummel auf dem Boden aus und bist bereit für einen weiteren Tag des Überlebens.!&lt;t-consumed&gt;&lt;hr /&gt;Dir fällt auf dass &lt;strong&gt;die Packung leer ist&lt;/strong&gt;!&lt;/t-consumed&gt;&lt;t-item-consumed&gt;&lt;hr/&gt;Das war dein &lt;strong&gt;letztes Streichholz&lt;/strong&gt;... Es wird schwer sein, jetzt noch eine Zigarette anzuzünden.&lt;/t-item-consumed&gt;</note>
+        <note category="from">db://ItemAction</note>
+      </notes>
+      <segment>
+        <source>Du zündest eine Zigarette an. Der Rauch lässt dich kräftig Husten, vermutlich weil du daran nicht gewöhnt bist... Nach ein paar Minuten &lt;strong&gt;gelingt es dir dich zu beruhigen&lt;/strong&gt;. Dieser Kurze Moment des Friedens ermöglicht lässt dich deinen Kummer vergessen und bringt dich zurück in die Wirklichkeit.&lt;hr /&gt;Du drückst den Stummel auf dem Boden aus und bist bereit für einen weiteren Tag des Überlebens.!&lt;t-consumed&gt;&lt;hr /&gt;Dir fällt auf dass &lt;strong&gt;die Packung leer ist&lt;/strong&gt;!&lt;/t-consumed&gt;&lt;t-item-consumed&gt;Das war dein &lt;strong&gt;letztes Streichholz&lt;/strong&gt;... Es wird schwer sein, jetzt noch eine Zigarette anzuzünden.&lt;/t-item-consumed&gt;</source>
+        <target><![CDATA[You light a cigarette. The smoke makes you cough violently, no doubt because you're not used to it... After a few minutes, <strong>you manage to calm down</strong>. This brief moment of respite allows you to clear your mind a little and take stock of the situation.<hr />You crush the stub on the ground ready to fight for survival once more!<t-consumed><hr />You notice that <strong>the packet is empty</strong>!</t-consumed><t-item-consumed><hr/>That was your <strong>last match</strong>... It's going to be hard to light another cigarette now.</t-item-consumed>]]></target>
       </segment>
     </unit>
   </file>
